# awesome-copilot-tui

./: .gitignore  Cargo.toml  README.md  design.md  requirements.md  tasks.md
docs/schemas/: enablement.schema.json
src/: app.rs  main.rs
src/domain/: mod.rs  model.rs  state.rs  toggle.rs
src/io/: catalog.rs  catalog_old.rs  enablement.rs  mod.rs  paths.rs  sync.rs  upstream.rs
src/ui/: components.rs  draw.rs  input.rs  mod.rs
