[package]
name = "awesome-copilot-tui"
version = "0.1.0"
edition = "2021"
authors = ["astrosteveo contributors"]
description = "Terminal UI for managing Awesome Copilot asset enablement"
license = "MIT"
repository = "https://github.com/astrosteveo/awesome-copilot-tui"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
jsonschema = "0.17"
once_cell = "1.19"
parking_lot = "0.12"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.8", features = ["chrono_0_4"] }
tempfile = "3.10"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
indoc = "2.0"
insta = { version = "1.38", features = ["json"] }
predicates = "3.1"
serial_test = "3.0"
